# slap.cli

./: pyproject.toml
.changelog/: 1.15.0.toml  _unreleased.toml
.github/workflows/: python.yml
changelog/: index.html
docs/: pyproject.toml  requirements.txt
search/: search_index.json
src/slap/: __init__.py  application.py  project.py
src/slap/ext/application/: report.py
src/slap/ext/project_handlers/: base.py  flit.py  poetry.py  setuptools.py  uv.py
src/slap/install/: installer.py
src/slap/templates/github/.github/workflows/: python.yaml
src/slap/templates/poetry/: pyproject.toml
src/slap/util/: git.py  logging.py  plugins.py  toml_file.py  url.py
