[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <4"
dependencies = [
    "babel==2.17.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "ghp-import==2.1.0",
    "griffe==0.49.0",
    "idna==3.10",
    "jinja2==3.1.5",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "mkdocs-autorefs==1.3.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.5",
    "mkdocs-material-extensions==1.3.1",
    "mkdocstrings==0.28.1",
    "mkdocstrings-python==1.16.1",
    "mksync==0.1.4",
    "networkx==3.4.2",
    "packaging==24.2",
    "paginate==0.5.7",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pygments==2.19.1",
    "pymdown-extensions==10.14.3",
    "python-adjudicator==0.5.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.2",
    "pyyaml-env-tag==0.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "six==1.17.0",
    "typeapi==1.5.1",
    "typing-extensions==4.12.2",
    "urllib3==2.3.0",
    "watchdog==6.0.0",
]
